--- a/index.html
+++ b/index.html
@@ -212,17 +212,27 @@
         }
     }
 
+    // Fetch existing messages from local storage
+    function fetchMessages() {
+        const messages = JSON.parse(localStorage.getItem('messages')) || [];
+        messages.forEach(displayMessage);
+    }
+
     // Ably history
     channel.history({ limit: 500 }, (err, resultPage) => {
         if (err) { console.error(err); return; }
         resultPage.items.reverse().forEach(item => {
-            displayMessage(JSON.parse(item.data));
+            const messageData = JSON.parse(item.data);
+            displayMessage(messageData);
+            saveMessageToLocalStorage(messageData.username, messageData.message, messageData.timestamp);
         });
     });
 
     // Subscribe to new messages
     channel.subscribe('message', msg => {
-        displayMessage(JSON.parse(msg.data));
+        const messageData = JSON.parse(msg.data);
+        displayMessage(messageData);
+        saveMessageToLocalStorage(messageData.username, messageData.message, messageData.timestamp);
     });
 
     // Send message
@@ -235,6 +245,13 @@
         messageInput.value = '';
     }
 
+    // Save message to local storage
+    function saveMessageToLocalStorage(username, message, timestamp) {
+        const messages = JSON.parse(localStorage.getItem('messages')) || [];
+        messages.push({ username, message, timestamp });
+        localStorage.setItem('messages', JSON.stringify(messages));
+    }
+
     sendBtn.addEventListener('click', sendMessage);
     messageInput.addEventListener('keypress', e => {
         if (e.key === 'Enter' && !e.shiftKey) {
@@ -244,12 +261,6 @@
     });
 
     // Fetch existing messages on page load
-    function fetchMessages() {
-        const messages = JSON.parse(localStorage.getItem('messages')) || [];
-        messages.forEach(displayMessage);
-    }
-
-    // Fetch messages on load
     fetchMessages();
 </script>
 
