--- a/index.html
+++ b/index.html
@@ -112,6 +112,27 @@
         .pin-box button {
             padding: 10px 18px; border-radius: 8px; border: none; background: #5cb85c; color: #fff; cursor: pointer;
         }
+
+        .context-menu {
+            display: none;
+            position: absolute;
+            background: white;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            z-index: 10;
+            padding: 5px;
+        }
+
+        .context-menu button {
+            background: transparent;
+            border: none;
+            color: #007bff;
+            cursor: pointer;
+        }
+
+        .context-menu button:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -207,16 +228,29 @@
         }
 
         msgEl.innerHTML = `<strong>${username}</strong>: ${content} <span style="font-size:0.8em;color:#666;">${new Date(timestamp).toLocaleTimeString()}</span>`;
-        
-        // Add delete button for the user's own messages
+
+        // Add context menu for the user's own messages
         if (username === localStorage.getItem('username')) {
-            const deleteBtn = document.createElement('button');
-            deleteBtn.innerText = 'Delete';
-            deleteBtn.style.position = 'absolute';
-            deleteBtn.style.top = '10px';
-            deleteBtn.style.right = '10px';
-            deleteBtn.onclick = () => deleteMessage(messageId, msgEl);
-            msgEl.appendChild(deleteBtn);
+            const contextMenu = document.createElement('div');
+            contextMenu.className = 'context-menu';
+            contextMenu.innerHTML = `<button onclick="deleteMessage('${messageId}', this)">Delete</button>`;
+            msgEl.appendChild(contextMenu);
+
+            // Show context menu on message click
+            msgEl.onclick = (event) => {
+                if (event.target !== contextMenu) {
+                    contextMenu.style.display = 'block';
+                    contextMenu.style.top = `${event.clientY}px`;
+                    contextMenu.style.left = `${event.clientX}px`;
+                }
+            };
+
+            // Hide context menu on outside click
+            document.addEventListener('click', (e) => {
+                if (!msgEl.contains(e.target)) {
+                    contextMenu.style.display = 'none';
+                }
+            });
         }
 
         chatDiv.appendChild(msgEl);
@@ -257,12 +291,15 @@
     // Delete message
     function deleteMessage(messageId, msgEl) {
         // Remove the message from the chat
-        msgEl.remove();
+        msgEl.parentNode.remove();
 
-        // Optionally, you could implement logic to remove the message from the Ably channel
-        // However, Ably does not support deleting messages directly from the history.
-        // You may need a backend service to do this if that functionality is required.
-        alert('Message deleted. (Note: This will not remove it from history for others.)');
+        // Optionally, publish a deletion message to notify others
+        const deleteData = { username: localStorage.getItem('username'), messageId, deleted: true };
+        channel.publish('message', JSON.stringify(deleteData));
+        alert('Message deleted.');
+
+        // Note: This approach assumes that the message is identified by messageId.
+        // You may need to implement a backend to manage message deletions effectively.
     }
 
     sendBtn.addEventListener('click', sendMessage);
