--- a/index.html
+++ b/index.html
@@ -1,310 +1,270 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Chat</title>
-    <style>
-        body {
-            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #74ebd5 0%, #9face6 100%);
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: black;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simple Chat</title>
+  <style>
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #74ebd5 0%, #9face6 100%);
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: black;
+    }
 
-        /* Dark mode */
-        @media (prefers-color-scheme: dark) {
-            body { background-color: #000; color: #fff; }
-            .chat-container { background: #111; color: #fff; }
-            .message { background: #222; color: #ddd; }
-            input, textarea { background: #222; color: #fff; border: 1px solid #555; }
-        }
+    .chat-container {
+      width: 95%;
+      max-width: 1100px;
+      height: 90vh;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.2);
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+    }
 
-        .chat-container {
-            width: 95%;
-            max-width: 1100px;
-            height: 90vh;
-            background: #fff;
-            border-radius: 12px;
-            box-shadow: 0 8px 30px rgba(0,0,0,0.2);
-            display: flex;
-            flex-direction: column;
-            overflow: hidden;
-        }
+    #chat {
+      flex: 1;
+      overflow-y: auto;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      background: inherit;
+    }
 
-        #chat {
-            flex: 1;
-            overflow-y: auto;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            background: inherit;
-        }
+    .sidebar {
+      display: flex;
+      flex-direction: column;
+      padding: 15px;
+      gap: 10px;
+      border-top: 1px solid #ddd;
+      background: inherit;
+    }
 
-        .sidebar {
-            display: flex;
-            flex-direction: column;
-            padding: 20px;
-            gap: 10px;
-            border-top: 1px solid #ddd;
-            background: inherit;
-        }
+    /* Google Chat–style bubbles */
+    .message {
+      max-width: 70%;
+      padding: 10px 14px;
+      border-radius: 18px;
+      line-height: 1.4;
+      word-wrap: break-word;
+      position: relative;
+      font-size: 0.95em;
+    }
 
-        .message {
-            padding: 10px;
-            border-radius: 8px;
-            background: #e9ecef;
-            word-wrap: break-word;
-            line-height: 1.4;
-            position: relative;
-        }
+    .message.left {
+      align-self: flex-start;
+      background: #e9ecef;
+      border-bottom-left-radius: 4px;
+    }
 
-        .message img {
-            max-width: 300px;
-            border-radius: 6px;
-            margin-top: 6px;
-            display: block;
-        }
+    .message.right {
+      align-self: flex-end;
+      background: #d1f4d3;
+      border-bottom-right-radius: 4px;
+    }
 
-        .message a { color: #2c7be5; word-break: break-all; }
+    .message img {
+      max-width: 260px;
+      border-radius: 8px;
+      margin-top: 6px;
+      display: block;
+    }
 
-        input, textarea {
-            width: 100%;
-            padding: 10px;
-            border-radius: 8px;
-            border: 1px solid #ccc;
-            outline: none;
-        }
+    .timestamp {
+      font-size: 0.75em;
+      color: #666;
+      margin-top: 2px;
+      text-align: right;
+    }
 
-        textarea { resize: none; height: 100px; }
+    input, textarea {
+      width: 100%;
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      outline: none;
+    }
 
-        button {
-            padding: 10px 18px;
-            background: #5cb85c;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-        }
+    textarea { resize: none; height: 80px; }
 
-        button:disabled { opacity: 0.5; cursor: not-allowed; }
+    button {
+      padding: 10px 18px;
+      background: #5cb85c;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
 
-        .overlay {
-            position: fixed; inset: 0;
-            display: flex; justify-content: center; align-items: center;
-            background: rgba(0, 0, 0, 0.6);
-            z-index: 100;
-        }
+    button:disabled { opacity: 0.5; cursor: not-allowed; }
 
-        .pin-box {
-            background: #fff; padding: 30px; border-radius: 12px; text-align: center; width: 90%; max-width: 300px;
-        }
+    .overlay {
+      position: fixed; inset: 0;
+      display: flex; justify-content: center; align-items: center;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 100;
+    }
 
-        .pin-box input {
-            width: 100%; padding: 12px; border-radius: 8px; border: 1px solid #ccc; text-align: center; margin-bottom: 15px; font-size: 1em;
-        }
+    .pin-box {
+      background: #fff; padding: 30px; border-radius: 12px; text-align: center; width: 90%; max-width: 300px;
+    }
 
-        .pin-box button {
-            padding: 10px 18px; border-radius: 8px; border: none; background: #5cb85c; color: #fff; cursor: pointer;
-        }
-    </style>
+    .pin-box input {
+      width: 100%; padding: 12px; border-radius: 8px; border: 1px solid #ccc; text-align: center; margin-bottom: 15px; font-size: 1em;
+    }
+
+    .pin-box button {
+      padding: 10px 18px; border-radius: 8px; border: none; background: #5cb85c; color: #fff; cursor: pointer;
+    }
+  </style>
 </head>
 <body>
 
 <!-- PIN overlay -->
 <div class="overlay" id="pinOverlay">
-    <div class="pin-box">
-        <h2>Enter PIN</h2>
-        <input type="password" id="pinInput" placeholder="Enter PIN">
-        <button id="pinBtn">Continue</button>
-    </div>
+  <div class="pin-box">
+    <h2>Enter PIN</h2>
+    <input type="password" id="pinInput" placeholder="Enter PIN">
+    <button id="pinBtn">Continue</button>
+  </div>
 </div>
 
 <div class="chat-container" id="chatApp" style="display: none;">
-    <div id="chat"></div>
-    <div class="sidebar">
-        <input type="text" id="username" placeholder="Enter username..." />
-        <textarea id="message" placeholder="Type message or paste image URL..." disabled></textarea>
-        <button id="send" disabled>Send</button>
-        <button id="deleteLocalData">Delete Local Data</button>
-    </div>
+  <div id="chat"></div>
+  <div class="sidebar">
+    <input type="text" id="username" placeholder="Enter username..." />
+    <textarea id="message" placeholder="Type message or paste image URL..." disabled></textarea>
+    <button id="send" disabled>Send</button>
+    <button id="deleteLocalData">Delete Local Data</button>
+  </div>
 </div>
 
 <audio id="newMessageSound" src="https://www.soundjay.com/button/sounds/button-3.mp3" preload="auto"></audio>
 
 <script src="https://cdn.ably.com/lib/ably.min-1.js"></script>
 <script>
-    const COMMON_PIN = '5432';
-    const ably = new Ably.Realtime('Vtd4-A.9jmIFA:umDML_i9STQP4BIH_u2Jon5BlkxuiK36w37FVrkhEl4');
-    const channel = ably.channels.get('chat');
+  const COMMON_PIN = '5432';
+  const ably = new Ably.Realtime('Vtd4-A.9jmIFA:umDML_i9STQP4BIH_u2Jon5BlkxuiK36w37FVrkhEl4');
+  const channel = ably.channels.get('chat');
 
-    const pinOverlay = document.getElementById('pinOverlay');
-    const pinInput = document.getElementById('pinInput');
-    const pinBtn = document.getElementById('pinBtn');
-    const chatApp = document.getElementById('chatApp');
-    const usernameInput = document.getElementById('username');
-    const messageInput = document.getElementById('message');
-    const sendBtn = document.getElementById('send');
-    const deleteLocalDataBtn = document.getElementById('deleteLocalData');
-    const chatDiv = document.getElementById('chat');
-    const newMessageSound = document.getElementById('newMessageSound');
+  const pinOverlay = document.getElementById('pinOverlay');
+  const pinInput = document.getElementById('pinInput');
+  const pinBtn = document.getElementById('pinBtn');
+  const chatApp = document.getElementById('chatApp');
+  const usernameInput = document.getElementById('username');
+  const messageInput = document.getElementById('message');
+  const sendBtn = document.getElementById('send');
+  const deleteLocalDataBtn = document.getElementById('deleteLocalData');
+  const chatDiv = document.getElementById('chat');
+  const newMessageSound = document.getElementById('newMessageSound');
 
-    let tabActive = true;
-
-    // Listen for visibility change
-    document.addEventListener("visibilitychange", () => {
-        tabActive = !document.hidden;
-    });
-
-    // PIN check
-    if (localStorage.getItem('chatPin') === COMMON_PIN) {
-        pinOverlay.style.display = 'none';
-        chatApp.style.display = 'flex';
-        if (localStorage.getItem('username')) {
-            usernameInput.value = localStorage.getItem('username');
-            messageInput.disabled = false;
-            sendBtn.disabled = false;
-        }
+  // PIN logic
+  if (localStorage.getItem('chatPin') === COMMON_PIN) {
+    pinOverlay.style.display = 'none';
+    chatApp.style.display = 'flex';
+    if (localStorage.getItem('username')) {
+      usernameInput.value = localStorage.getItem('username');
+      messageInput.disabled = false;
+      sendBtn.disabled = false;
     }
+  }
 
-    pinBtn.addEventListener('click', () => {
-        if (pinInput.value.trim() === COMMON_PIN) {
-            localStorage.setItem('chatPin', COMMON_PIN);
-            pinOverlay.style.display = 'none';
-            chatApp.style.display = 'flex';
-            if (localStorage.getItem('username')) {
-                usernameInput.value = localStorage.getItem('username');
-                messageInput.disabled = false;
-                sendBtn.disabled = false;
-            }
-        } else {
-            alert('Wrong PIN');
-        }
-    });
-
-    // Enable chat once username is set
-    usernameInput.addEventListener('change', () => {
-        const name = usernameInput.value.trim();
-        if (!name) return;
-        localStorage.setItem('username', name);
+  pinBtn.addEventListener('click', () => {
+    if (pinInput.value.trim() === COMMON_PIN) {
+      localStorage.setItem('chatPin', COMMON_PIN);
+      pinOverlay.style.display = 'none';
+      chatApp.style.display = 'flex';
+      if (localStorage.getItem('username')) {
+        usernameInput.value = localStorage.getItem('username');
         messageInput.disabled = false;
         sendBtn.disabled = false;
-    });
+      }
+    } else {
+      alert('Wrong PIN');
+    }
+  });
 
-    // Display messages (with image/link support)
-    function displayMessage({ username, message, timestamp, messageId }) {
-        const msgEl = document.createElement('div');
-        msgEl.className = 'message';
-        let content = message;
+  usernameInput.addEventListener('change', () => {
+    const name = usernameInput.value.trim();
+    if (!name) return;
+    localStorage.setItem('username', name);
+    messageInput.disabled = false;
+    sendBtn.disabled = false;
+  });
 
-        if (message.match(/^https?:\/\/.*\.(jpg|jpeg|png|gif|webp)$/i)) {
-            content = `<img src="${message}" alt="image">`;
-        } else if (message.match(/^https?:\/\//i)) {
-            content = `<a href="${message}" target="_blank">${message}</a>`;
-        }
+  // Render message in Google Chat style
+  function displayMessage({ username, message, timestamp }) {
+    const currentUser = localStorage.getItem('username');
+    const msgEl = document.createElement('div');
+    msgEl.className = 'message ' + (username === currentUser ? 'right' : 'left');
 
-        msgEl.innerHTML = `<strong class="username" onclick="confirmDelete('${messageId}', this)">${username}</strong>: ${content} <span style="font-size:0.8em;color:#666;">${new Date(timestamp).toLocaleTimeString()}</span>`;
-
-        chatDiv.appendChild(msgEl);
-        chatDiv.scrollTop = chatDiv.scrollHeight;
-
-        // Play sound and alert if tab is not active
-        if (!tabActive) {
-            newMessageSound.play();
-            alert(`New message from ${username}: ${message}`);
-        }
+    let content = message;
+    if (message.match(/^https?:\/\/.*\.(jpg|jpeg|png|gif|webp)$/i)) {
+      content = `<img src="${message}" alt="image">`;
+    } else if (message.match(/^https?:\/\//i)) {
+      content = `<a href="${message}" target="_blank">${message}</a>`;
     }
 
-    // Confirm deletion of the message
-    function confirmDelete(messageId, usernameElement) {
-        const confirmation = window.prompt("Type 'y' to confirm deletion of your message:");
-        if (confirmation === 'y' || confirmation === 'Y') {
-            deleteMessage(messageId, usernameElement);
-        } else {
-            alert('Deletion cancelled.');
-        }
-    }
+    msgEl.innerHTML = `<div><strong>${username}</strong><br>${content}</div>
+                       <div class="timestamp">${new Date(timestamp).toLocaleTimeString()}</div>`;
 
-    // Ably history
-    channel.history({ limit: 500 }, (err, resultPage) => {
-        if (err) { console.error(err); return; }
-        resultPage.items.forEach(item => {
-            displayMessage(JSON.parse(item.data));
-        });
+    chatDiv.appendChild(msgEl);
+    chatDiv.scrollTop = chatDiv.scrollHeight;
+  }
+
+  // Load all previous history properly in order
+  function loadHistory() {
+    channel.history({ limit: 200, direction: 'forwards' }, (err, resultPage) => {
+      if (err) { console.error(err); return; }
+      chatDiv.innerHTML = ""; // clear before re-render
+      resultPage.items.reverse().forEach(item => {
+        displayMessage(JSON.parse(item.data));
+      });
     });
+  }
 
-    // Subscribe to new messages
-    channel.subscribe('message', msg => {
-        const messageData = JSON.parse(msg.data);
-        displayMessage(messageData);
-    });
+  // Subscribe to live updates
+  channel.subscribe('message', msg => {
+    displayMessage(JSON.parse(msg.data));
+    newMessageSound.play();
+  });
 
-    // Send message
-    function sendMessage() {
-        const name = usernameInput.value.trim();
-        const msg = messageInput.value.trim();
-        if (!name || !msg) return;
-        const messageId = Date.now(); // Use timestamp as a unique ID
-        const data = { username: name, message: msg, timestamp: Date.now(), messageId };
-        channel.publish('message', JSON.stringify(data));
-        messageInput.value = '';
+  // Initial load
+  loadHistory();
+
+  // Send
+  function sendMessage() {
+    const name = usernameInput.value.trim();
+    const msg = messageInput.value.trim();
+    if (!name || !msg) return;
+    const data = { username: name, message: msg, timestamp: Date.now() };
+    channel.publish('message', JSON.stringify(data));
+    messageInput.value = '';
+  }
+
+  sendBtn.addEventListener('click', sendMessage);
+  messageInput.addEventListener('keypress', e => {
+    if (e.key === 'Enter' && !e.shiftKey) {
+      e.preventDefault();
+      sendMessage();
     }
+  });
 
-    // Delete message
-    function deleteMessage(messageId, usernameElement) {
-        const username = usernameElement.innerText;
-
-        if (username === localStorage.getItem('username')) {
-            // Remove the message from the chat
-            usernameElement.parentNode.remove();
-
-            // Publish a deletion message to notify others
-            const deleteData = { username: localStorage.getItem('username'), messageId, deleted: true };
-            channel.publish('message', JSON.stringify(deleteData));
-            alert('Message deleted.');
-        } else {
-            alert('You can only delete your own messages.');
-        }
-    }
-
-    sendBtn.addEventListener('click', sendMessage);
-    messageInput.addEventListener('keypress', e => {
-        if (e.key === 'Enter' && !e.shiftKey) {
-            e.preventDefault();
-            sendMessage();
-        }
-    });
-
-    // Delete local data
-    deleteLocalDataBtn.addEventListener('click', () => {
-        localStorage.removeItem('chatPin');
-        localStorage.removeItem('username');
-        alert('Local data deleted. Please refresh the page and re-enter your details to log in again.');
-        usernameInput.value = '';
-        messageInput.disabled = true;
-        sendBtn.disabled = true;
-        pinOverlay.style.display = 'flex'; // Show PIN overlay again
-        chatApp.style.display = 'none'; // Hide chat app
-    });
-
-    // Fetch existing messages on page load
-    function fetchMessages() {
-        channel.history({ limit: 500 }, (err, resultPage) => {
-            if (err) { console.error(err); return; }
-            resultPage.items.forEach(item => {
-                displayMessage(JSON.parse(item.data));
-            });
-        });
-    }
-
-    // Fetch messages on load
-    fetchMessages();
+  // Delete local data (logout)
+  deleteLocalDataBtn.addEventListener('click', () => {
+    localStorage.removeItem('chatPin');
+    localStorage.removeItem('username');
+    alert('Local data deleted. Refresh page to log in again.');
+    pinOverlay.style.display = 'flex';
+    chatApp.style.display = 'none';
+  });
 </script>
-
 </body>
 </html>
